# rust-rocket-api

./: Cargo.toml  README.md  Rocket.toml  database.sqlite  database.sqlite-shm  database.sqlite-wal
migrations/2023-03-19-120427_create_rustaceans/: up.sql
src/: auth.rs  main.rs  models.rs  repositories.rs
