[package]
name = "rocket-app"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = { version = "0.5.0-rc", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
base64 = "0.21"
diesel = { version = "1.4", features = ["sqlite", "r2d2"] }

[dependencies.rocket_sync_db_pools]
version = "0.1.0-rc"
default-features = false
features = ["diesel_sqlite_pool"]

